ran bundle install

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>Welcome to my Page</h1>
-	<p>Here is my first ruby on rails coding experience.
-Learn more <%= link_to "about me", "about", class: "btn btn-info" %></p>
+	<p>
+		<%= link_to "Log In", "#", class: "btn btn-default btn-lg" %>
+	<%= link_to "Sign In", "#", class: "btn btn-primary btn-lg" %>
+	
+	</p>
 </div>
 
