--- a/app/assets/stylesheets/bootstrapcustom.css.scss
+++ b/app/assets/stylesheets/bootstrapcustom.css.scss
@@ -1,4 +1,19 @@
-$body-bg:			#9b59b6;
-$navbar-default-bg:  #ecf0f1;
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+$body-bg:														#9b59b6;
+$font-family-sans-serif: 						'Open Sans', sans-serif;
+$navbar-default-bg:  								#ecf0f1;
+$navbar-default-brand-color : 			#9b59b6;
+$jumbotron-bg: 											white;
 
 @import 'bootstrap';
+
+.center {
+		text-align: center;
+}
+
+.navbar-brand {
+		font-weight: bold;
+
+}
+
