--- a/app/views/pinxes/index.html.erb
+++ b/app/views/pinxes/index.html.erb
@@ -6,7 +6,9 @@
   <thead>
     <tr>
       <th>Description</th>
+      <th colspan="3"></th>
       <th colspan="3">User</th>
+    </
     </tr>
   </thead>
 
