--- a/app/views/pinxes/_form.html.erb
+++ b/app/views/pinxes/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@pin) do |f| %>
-  <% if @pin.errors.any? %>
+<%= form_for(@pinx) do |f| %>
+  <% if @pinx.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
+      <h2><%= pluralize(@pinx.errors.count, "error") %> prohibited this pin from being saved:</h2>
 
       <ul>
       <% @pin.errors.full_messages.each do |msg| %>
