--- a/app/views/pinxes/_form.html.erb
+++ b/app/views/pinxes/_form.html.erb
@@ -4,7 +4,7 @@
       <h2><%= pluralize(@pinx.errors.count, "error") %> prohibited this pin from being saved:</h2>
 
       <ul>
-      <% @pin.errors.full_messages.each do |msg| %>
+      <% @pinx.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
