bundle install, all ready to push to herko

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>Merry Christmas ya fithly animal</h1>
-<p>We all love presents, so if you really want something, put it on the list. If you've been a little shit this year, then you will most likely not get that awesome thing you wanted. Be careful what you wish for!</p>
+<center><p>We all love presents, so if you really want something, put it on the list. If you've been a little shit this year, then you will most likely not get that awesome thing you wanted. Be careful what you wish for!</p></center>
