--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
-	<h1>Welcome to my Page</h1>
+	<h1>Hey Nerd. Welcome.</h1>
 <% if user_signed_in? %>
-	#do something
+	Start making your wish list by saving your stuff to this page!
 <% else %>
 
 	<p>
